ordered lists corrected

--- a/rune/bio.html
+++ b/rune/bio.html
@@ -57,12 +57,12 @@
             <div class="byu">byu</div>
             <div class="edtime1"> <h3 class="headline">Brigham Young University - Idaho</h3><h4 class="headlineP2">2020 - Present </h4>
               </div>
-            <div class="edinfo1"><li>2020 - Present
+            <div class="edinfo1"><ul><li>2020 - Present
                       <li>Idaho, Remote
                       <li>- In progress towards Bachelors
                       <li>Remote at BYU Idaho with 39 credits and a current GPA of 3.43</li>
                       <li>Certificate in Computer Programming estimated to be received November 1st 2022</li>
-                      <li>Database certificate estimated to be received June 1st 2023</li></div>
+                      <li>Database certificate estimated to be received June 1st 2023</li></ul></div>
             <div class="pathway"><h3> BYU Pathways	</h3>
                   </div>
            <div class="edtime2"><h4 class="headlineP2">September 2019 - July 2020</h4></div>
@@ -75,22 +75,22 @@
           <h2 class="comp-time">July 2022 - Present </h2> 
           <h3 class="comp-name">Keller Supply Company</h3>
           <h3 class="comp-city">Eugene, Oregon</h3>
-          <div class="experience"><li>Managing warehouse inventory with about 14000 SKU's for accurate and efficiency</li>
+          <div class="experience"><ul><li>Managing warehouse inventory with about 14000 SKU's for accurate and efficiency</li>
           <li>Collaborates with management, sales staff, warehouse personnel, corporate buyers to provide customers correct product</li>
           <li>Communicates with sales, management, and warehouse staff to maximize efficiency in ensure inventory control success year over year</li>
           <li>Communicates accurate and timely data collection and reporting for management</li>
           <li>Assessed inventory prior to analysing and creating purchase orders on a daily basis</li>
-          <li>Mastered Eclipse for daily tasks in relation to purchase orders</li></div>
+          <li>Mastered Eclipse for daily tasks in relation to purchase orders</li></ul></div>
           </div>
             <div class="company2">
           <h2 class="comp-title">Reporting Specialist</h2>
           <h2 class="comp-time">February 2020 - February 2021 </h2> 
           <h3 class="comp-name">First Call Resolution (FCR)</h3>
           <h3 class="comp-city">Eugene, Oregon</h3>
-          <div class="experience"><li>Created ETL to collect, transform and load data from several online sources on a daily basis</li>
+          <div class="experience"><ul><li>Created ETL to collect, transform and load data from several online sources on a daily basis</li>
           <li>Organized data in SQL database with over 3 million rows of data</li>
           <li>Created, displayed and presented data in Power BI and PowerPoint for Management team</li>
-          <li>Transformed an internal Personnel Change Procedure using Microsoft Forms and SharePoint, reducing approval time from weeks to minutes</li></div>
+          <li>Transformed an internal Personnel Change Procedure using Microsoft Forms and SharePoint, reducing approval time from weeks to minutes</li></ul></div>
           </div>
             <div class="company1">
           <h2 class="comp-title">Draw Coordinator</h2>
@@ -98,12 +98,12 @@
           <h3 class="comp-name">Register Guard</h3>
           <h3 class="comp-city">Eugene, Oregon</h3>
           <div class="experience">
-          <li>Analyzed trends for sales of about 400 outlets for several publications</li>
+        <ul><li>Analyzed trends for sales of about 400 outlets for several publications</li>
           <li>Ensured accuracy using advanced Excel functions and computations including macros</li>
           <li>Improved data entry process by 95% from 4 hours to 15 minute process</li>
           <li>Automated a 16 hour procedure to a few mouse click process, using macros and automation</li>
           <li>Established new procedures with macro automation of spreadsheets made computations accurate and fast and saved several hours of work for team on a daily and weekly basis</li>
-          <li>Promoted to Draw coordinator in 2012 and impacted department success</li></div>
+          <li>Promoted to Draw coordinator in 2012 and impacted department success</li></ul></div>
           </div>
            
           </div>
