upload new file names

--- a/rune/bio4.html
+++ b/rune/bio4.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <header >
-            <div class="inHeader">     </div>      
+            <div class="inHeader">          
             <a id="logo_link" href="index.html"> 
                 <img class=logo src="images/rune-tri-logo.png" alt="Rune Logo image">
             </a>
@@ -83,7 +83,35 @@
       Established new procedures with macro automation of spreadsheets made computations accurate and fast and saved several hours of work for team on a daily and weekly basis</li>
       <li>
       Promoted to Draw coordinator in 2012 and impacted department success</li></ul></div>
-            
+      <div class="item1"><h2 class="centered">Experience</h2></div> 
+      <div class="item1"><h2 class="centered">
+        <div class="row">
+            <div class="column">
+              <img class=logo src="images/css-icon.png" alt="css Logo image" style="width:100%">
+            </div>
+            <div class="column">
+        <img class=logo src="images/js copy.png" alt="js Logo image"style="width:100%">
+    </div>
+     <div class="column">
+        <img class=logo src="images/php-logo copy.svg" alt="PHP Logo image"style="width:100%">
+    </div>
+    <div class="column"> 
+        <img class=logo src="images/mysql.png" alt="css Logo image"style="width:100%">
+    </div>
+         <div class="column">
+        <img class=logo src="images/Oracle-PL-SQL.png" alt="Oracle-PL-SQL Logo image"style="width:100%">
+    </div>
+     <div class="column"> 
+        <img class=logo src="images/microsoft-sql-server copy.png" alt="MSSQL Logo image"style="width:100%">
+    </div>
+    <div class="column">
+              <img class=logo src="images/python-logo copy 2.png" alt="Python Logo image" style="width:100%">
+            </div>
+     <div class="column"> 
+        <img class=logo src="images/power-bi copy.webp" alt="Power BI Logo image"style="width:100%">
+    </div>
+   
+         
       </div>
 
 </main>
