--- a/rune/bio.html
+++ b/rune/bio.html
@@ -90,10 +90,10 @@
               <img class=logo src="images/css-icon.png" alt="css Logo image" style="width:100%">
             </div>
             <div class="column">
-        <img class=logo src="images/js copy.png" alt="js Logo image" style="width:100%">
+        <img class=logo src="images/js-copy.png" alt="js Logo image" style="width:100%">
     </div>
      <div class="column">
-        <img class=logo src="images/php-logo copy.svg" alt="PHP Logo image" style="width:100%">
+        <img class=logo src="images/php-logo.svg" alt="PHP Logo image" style="width:100%">
     </div>
     <div class="column"> 
         <img class=logo src="images/mysql.png" alt="css Logo image" style="width:100%">
@@ -102,15 +102,16 @@
         <img class=logo src="images/Oracle-PL-SQL.png" alt="Oracle-PL-SQL Logo image" style="width:100%">
     </div>
      <div class="column"> 
-        <img class=logo src="images/microsoft-sql-server copy.png" alt="MSSQL Logo image" style="width:100%">
+        <img class=logo src="images/microsoft-sql-server.png" alt="MSSQL Logo image" style="width:100%">
     </div>
     <div class="column">
-              <img class=logo src="images/python-logo copy 2.png" alt="Python Logo image" style="width:100%">
+              <img class=logo src="images/python-logo.png" alt="Python Logo image" style="width:100%">
             </div>
      <div class="column"> 
-        <img class=logo src="images/power-bi copy.webp" alt="Power BI Logo image" style="width:100%">
+        <img class=logo src="images/power-bi.webp" alt="Power BI Logo image" style="width:100%">
     </div>
-   
+   </div>
+      </div>
          
       </div>
 
